--- a/LE3/LE3.ipynb
+++ b/LE3/LE3.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -247,6 +247,7 @@
     "    print(tree.find(12))\n",
     "    ''' Following tree is getting created:\n",
     "                    10\n",
+    "        return texto \n",
     "                 /      \\\n",
     "               5         12\n",
     "              / \\           \\\n",
@@ -275,12 +276,13 @@
     "        \n",
     "def Read_Text(file):\n",
     "    with open(file, 'r') as reader:\n",
-    "        texto = reader.read()\n",
-    "        return texto "
+    "        text = reader.read()\n",
+    "    return text"
    ]
   },
   {
    "source": [
+    "\n",
     "## 1.Escreva um programa em C, que leia uma lista de nomes de pessoas e seus respectivos números de telefones, a partir de um arquivo de texto, e insira esses dados em uma árvore de busca binária. Após a criação da árvore, mostrar um menu que permita ao usuário:\n",
     "\n",
     "1. realizar uma busca na árvore por um nome específico;\n",
@@ -291,7 +293,7 @@
     "\n",
     "4. imprimir a lista inteira. \n",
     "\n",
-    "Ao finalizar, escrever os dados da lista de volta ao arquivo. Testar o programa com pelo menos 10 nomes.\n"
+    "Ao finalizar, escrever os dados da lista de volta ao arquivo. Testar o programa com pelo menos 10 nomes."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -312,6 +314,68 @@
     }
    ],
    "source": [
+    "\"\"\"Para resolver essa questão resolvi modificar a TAD para trabalhar com listas, sendo o primeiro elemento da lista o elemento chave considerado na árvore, assim permitindo que tenhamos nese caso uma árvore com páres de nomes e números de telefone. Em seguindo utilizei um loop para estabelescer um menu e implementei cada um dos 4 possíveis comandos\"\"\"\n",
+    "def Menu_Interativo(file_name):\n",
+    "    print(\"Contruindo árvore a partir do arquivo {}\".format(file_name))\n",
+    "    tree_names = Tree()\n",
+    "    #A partir do nome do arquivo criamos uma lista de listas no seguinte formato: [{nome},{número}]:\n",
+    "    names_number = [name_number.split(',') for name_number in Read_Text(file_name).split('\\n')]\n",
+    "\n",
+    "    #Preenchemos a árvore com os pares nome-número:\n",
+    "    for i in range(len(names_number)):\n",
+    "        tree_names.insert(names_number[i])\n",
+    "    print(\"Árvore construída!\")\n",
+    "    \n",
+    "    comand = 0 \n",
+    "    #Loop para receber os comandos e direcionar as ações e sair caso o comando seja 'x':\n",
+    "    while comand != 'x': \n",
+    "        comand = input(\"Selecione uma opção: \\n -: i: inserir novo nome \\n -: b: buscar nome na árvore \\n -: d: deletar nome existente \\n -: p: printar a lista \\n e finalmente 'x' para sair!\") \n",
+    "        if comand == 'p':\n",
+    "            print(\"\\n\\nPercorrendo árvore em preordem:\")\n",
+    "            tree_names.preorder()\n",
+    "            print()\n",
+    "        if comand == 'b':\n",
+    "            print(\"\\n\\nBuscando nome:\")\n",
+    "            name_to_find = input(\"Digite o nome a ser buscado\")\n",
+    "            name_found = tree_names.find(name_to_find)\n",
+    "            #Operador ternário para printar o nome ou que não foi encontrado:\n",
+    "            print(\"Encontrado:\",name_found) if name_found else \"Nome não encontrado\"\n",
+    "        if comand == 'i':\n",
+    "            print(\"\\n\\nAdicionando novo nome:\")\n",
+    "            new_data = [input(\"Digite novo nome\")]\n",
+    "            new_data.append(input(\"Digite o número\"))\n",
+    "            tree_names.insert(new_data)\n",
+    "            print(\"\\n\\nNovo nome e número adicionados:\",new_data)\n",
+    "        if comand == 'd':\n",
+    "            print()\n",
+    "            to_delete = input(\"Digite o nome a ser deletado.\")\n",
+    "            try:\n",
+    "                tree_names.delete(to_delete)\n",
+    "                print(\"Nome deletado:\",to_delete)\n",
+    "            except AttributeError:\n",
+    "                print(\"Nome não encontrado:\",to_delete)\n",
+    "\n",
+    "    #Finalizado o loop de menu, foi criada uma função especial para percorrer a lista salvando seu contúdo como uma lista      \n",
+    "    to_text = []\n",
+    "    def PreorderToText(root):\n",
+    "        if root:\n",
+    "            #print(str(self.data), end = ' ')\n",
+    "            to_text.append(root.data)\n",
+    "            if root.leftChild:\n",
+    "                PreorderToText(root.leftChild)\n",
+    "            if root.rightChild:\n",
+    "                PreorderToText(root.rightChild)\n",
+    "\n",
+    "    print(\"\\nFinalizado, savando a árvore em arquivo de texto...\")\n",
+    "    PreorderToText(tree_names.root)\n",
+    "    #A partir da lista de lista que representa o conteúdo da árvore, processaremos em uma string (text)\n",
+    "    text = '\\n'.join(str(x) for x in ([x[0]+\",\"+x[1] for x in to_text if len(x)>1]))\n",
+    "    #Finalmente essa string é salva em texto\n",
+    "    Save_Text(text,\"names_from_tree\")\n",
+    "    print(\"Árvore salva!\")\n",
+    "\n",
+    "'''----------------------------------------------------------------------------------------------------------------'''\n",
+    "\n",
     "def Menu_exemplo(file_name):\n",
     "    print(\"Contruindo árvore a partir do arquivo {}\".format(file_name))\n",
     "    tree_names = Tree()\n",
@@ -374,65 +438,15 @@
     "    print(\"Árvore salva!\")\n",
     "\n",
     "\n",
-    "'''----------------------------------------------------------------------------------------------------------------'''\n",
     "\n",
-    "def Menu_Interativo(file_name):\n",
-    "    print(\"Contruindo árvore a partir do arquivo {}\".format(file_name))\n",
-    "    tree_names = Tree()\n",
-    "    names_number = [name_number.split(',') for name_number in Read_Text(file_name).split('\\n')]\n",
-    "    for i in range(len(names_number)):\n",
-    "        tree_names.insert(names_number[i])\n",
-    "    print(\"Árvore construída!\")\n",
-    "    comand = 0 \n",
-    "    while comand != 'x': \n",
-    "        comand = input(\"Selecione uma opção: \\n -: i: inserir novo nome \\n -: b: buscar nome na árvore \\n -: d: deletar nome existente \\n -: p: printar a lista \\n e finalmente 'x' para sair!\") \n",
-    "        if comand == 'p':\n",
-    "            print(\"\\n\\nPercorrendo árvore em preordem:\")\n",
-    "            tree_names.preorder()\n",
-    "            print()\n",
-    "        if comand == 'b':\n",
-    "            print(\"\\n\\nBuscando nome:\")\n",
-    "            name_to_find = input(\"Digite o nome a ser buscado\")\n",
-    "            data = tree_names.find(name_to_find)\n",
-    "            print(\"Encontrado:\",data) if data else \"Nome não encontrado\"\n",
-    "        if comand == 'i':\n",
-    "            print(\"\\n\\nAdicionando novo nome:\")\n",
-    "            new_data = [input(\"Digite novo nome\")]\n",
-    "            new_data.append(input(\"Digite o número\"))\n",
-    "            tree_names.insert(new_data)\n",
-    "            print(\"\\n\\nNovo nome e número adicionados:\",new_data)\n",
-    "        if comand == 'd':\n",
-    "            print()\n",
-    "            to_delete = input(\"Digite o nome a ser deletado.\")\n",
-    "            try:\n",
-    "                tree_names.delete(to_delete)\n",
-    "                print(\"Nome deletado:\",to_delete)\n",
-    "            except AttributeError:\n",
-    "                print(\"Nome não encontrado:\",to_delete)\n",
-    "            \n",
-    "        to_text = []\n",
-    "        def PreorderToText(root):\n",
-    "            if root:\n",
-    "                #print(str(self.data), end = ' ')\n",
-    "                to_text.append(root.data)\n",
-    "                if root.leftChild:\n",
-    "                    PreorderToText(root.leftChild)\n",
-    "                if root.rightChild:\n",
-    "                    PreorderToText(root.rightChild)\n",
-    "\n",
-    "    print(\"\\nFinalizado, savando a árvore em arquivo de texto...\")\n",
-    "    PreorderToText(tree_names.root)\n",
-    "    text = '\\n'.join(str(x) for x in ([x[0]+\",\"+x[1] for x in to_text if len(x)>1]))\n",
-    "    Save_Text(text,\"names_from_tree\")\n",
-    "    print(\"Árvore salva!\")\n",
     "\n",
     "\n",
     " \n",
     "\n",
     "to_text = []\n",
-    "#Menu_exemplo('nomes.txt')\n",
-    "Menu_Interativo('nomes.txt')\n",
-    "\n"
+    "Menu_exemplo('nomes.txt')\n",
+    "#Menu_Interativo('nomes.txt')\n",
+    "#Basta comentar o exemplo e descomentar o Menu_interativo para acessar e interagir com o menu.\n"
    ]
   },
   {
@@ -456,6 +470,8 @@
     }
    ],
    "source": [
+    "\"\"\"Essa questão eu não me orgulho da solução, foi uma recursividade covarde, mas, a vida tem dessas.\"\"\"\n",
+    "\n",
     "  ''' Following tree is getting created:\n",
     "                    10\n",
     "                 /     \\                                                     \n",
@@ -480,15 +496,15 @@
     "\n",
     "def TreeHeight(root):    \n",
     "    height = []\n",
-    "    def Altura3(root,h=0):\n",
+    "    def _Height(root,h=0):\n",
     "        if root.leftChild:\n",
-    "            Altura3(root.leftChild,h+1)\n",
+    "            _Height(root.leftChild,h+1)\n",
     "        if root.rightChild:\n",
-    "            Altura3(root.rightChild,h+1)\n",
+    "            _Height(root.rightChild,h+1)\n",
     "        else:\n",
     "            height.append(h)\n",
     "            #print(h)\n",
-    "    Altura3(root)\n",
+    "    _Height(root)\n",
     "    if height == 0:\n",
     "        return -1\n",
     "    return max(height)+1\n",
@@ -537,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -546,34 +562,49 @@
      "text": [
       "Construindo árvore\nConstruída! Criando códigos de cada letra:\nTudo pronto!\nteste básico:\n1 1 0 1 1 1 0 1 1 0 0 1 1 1 0 0 1 0 0 0 0 1 0 1 0 0 1 1 1 0 1 0 1 1 0 1 0 0 1 1 0 0 1 0 1 1 0 0 1 0 0 1 1 1 1 0 1 1 0 1 1 1 1 0 0 1 0 1 0 0 1 1 1 0 1 1 1 1 0 1 1 1 0 0 1 0 0 0 1 1 0 0 1 1 1 1 1 0 0 1 0 0 1 0 1 0 0\nDANIEL BRITO DOS \n SANTOS\n--------------------------------\n Agora leremos um arquivo de texto, converteremos e salvaremos o código:\n\ncaráctere Inválido:>>;<<\n1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 1 0 1 1 0 0 1 1 1 1 1 0 0 0 0 0 1 1 0 1 0 1 1 1 0 0 1 0 0 1 0 0 1 0 1 1 1 1 1 1 0 1 1 0 0 1 0 1 0 1 0 1 0 0 1 1 1 0 1 1 1 1 1 1 0 1 0 1 0 0 0 1 0 1 0 0 1 0 1 0 0 0 1 1 0 0 1 0 0 1 1 1 1 0 0 0 0 1 0 1 0 0 1 1 1 0 1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 1 1 0 0 1 1 1 1 0 0 1 0 1 1 1 1 1 1 0 0 1 1 1 0 1 1 0 1 1 0 1 1 1 0 1 1 0 1 1 1 0 0 1 0 1 0 0 1 1 0 0 1 0 0 1 1 1 1 0 1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 1 0 1 1 0 0 1 1 1 1 1 0 0 0 0 0 1 1 0 1 0 1 1 1 0 0 1 1 1 1 0 0 1 1 1 1 0 1 1 1 1 1 0 1 1 0 0 1 0 1 1 1 1 1 1 0 1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 1 1 0 0 1 1 1 0 1 0 1 1 1 1 0 0 1 0 0 0 0 0 1 1 1 0 1 1 1 1 1 0 1 1 0 1 0 0 0 1 0 0 0 0 1 1 1 0 1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 1 1 0 0 1 1 1 1 0 0 1 1 0 1 0 1 0 0 1 1 1 0 0 1 1 0 0 1 1 1 1 1 0 1 1 1 0 1 1 0 0 0 1 1 1 1 0 1 1 0 1 1 1 1 0 0 1 1 0 1 0 1 0 0 1 1 1 0 0 1 1 0 0 1 1 1 1 1 0 1 1 1 0 1 1 0 0 0 1 1 1 1 1 0 0 1 0 0 0 0 0 1 1 1 0 1 1 1 1 1 0 1 1 0 1 0 0 0 1 0 0 0 0 1 1 1 0 0 0 0 1 0 1 0 0 1 1 1 0 1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 1 1 0 0 1 1 1 0 1 0 1 1 1 1 0 0 1 0 1 1 1 1 1 1 0 0 1 1 0 1 0 1 0 0 1 1 1 0 1 0 1 1 1 1 1 1 0 0 1 1 0 1 0 0 1 0 1 1 1 1 1 0 0 0 0 0 1 1 1 1 1 0 1 0 1 0 0 0 1 1 0 1 1 1 0 1 0 1 1 1 1 1 0 0 1 0 0 1 0 0 1 1 0 0 0 1 1 0 1 1 1 0 0 1 1 0 1 1 0 0 0 0 1 1 0 1 1 0 0 1 0 0 1 1 1 1 0 0 1 0 0 0 0 0 1 1 1 0 1 0 1 1 1 1 1 0 0 0 1 1 1 0 1 0 1 0 0 0 1 1 0 1 1 1 0 0 1 0 0 0 0 0 0 1 1 1 1 1 0 1 1 1 0 1 1 0 1 1 1 0 1 0 1 1 1 1 0 1 0 1 0 1 0 0 0 1 1 1 0 0 1 1 1 1 0 1 0 1 0 1 1 1 1 0 0 0 1 0 0 1 1 0 1 1 1 1 0 0 1 0 0 0 0 0 1 1 1 0 1 1 1 1 1 0 1 1 0 1 1 1 0 1 1 0 1 1 1 0 0 0 1 1 1 0 1 0 1 1 1 1 1 1 0 0 1 1 0 1 0 0 1 0 1 1 1 1 1 0 0 0 0 0 1 1 1 1 1 0 0 1 1 0 1 1 1 0 1 0 0 0 0 1 0 0 1 0 0 1 0 0 0 1 1 0 0 0 1 1 1 1 0 1 1 0 1 1 1 1 0 1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 1 0 1 1 0 0 1 1 1 1 1 0 0 0 0 0 1 1 0 1 0 1 1 1 0 0 1 1 1 1 0 0 1 1 1 1 0 1 1 1 1 1 0 1 1 0 0 1 0 1 1 1 1 1 1 0 1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 1 1 0 0 1 1 1 1 1 0 0 1 0 0 0 0 1 0 0 1 1 1 1 0 0 1 1 1 1 0 0 0 0 0 1 0 0 1 1 0 0 0 0 0 1 0 1 0 0 0 1 1 0 0 1 0 0 1 1 1 0 0 0 0 0 1 1 1 1 1 1 0 1 0 1 0 0 0 1 1 0 1 1 1 0 0 1 0 1 0 0 1 1 0 0 0 1 1 1 1 0 1 1 0 1 1 1 1 0 1 1 1 1 0\nCAMINANTE, SON TUS HUELLAS\nEL CAMINO Y NADA MAS\nCAMINANTE, NO HAY CAMINO,\nSE HACE CAMINO AL ANDAR.\nAL ANDAR SE HACE EL CAMINO,\nY AL VOLVER LA VISTA ATRAS\nSE VE LA SENDA QUE NUNCA\nSE HA DE VOLVER A PISAR.\nCAMINANTE, NO HAY CAMINO\nSINO ESTELAS EN LA MAR.\n\n\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'CAMINANTE, SON TUS HUELLAS\\nEL CAMINO Y NADA MAS\\nCAMINANTE, NO HAY CAMINO,\\nSE HACE CAMINO AL ANDAR.\\nAL ANDAR SE HACE EL CAMINO,\\nY AL VOLVER LA VISTA ATRAS\\nSE VE LA SENDA QUE NUNCA\\nSE HA DE VOLVER A PISAR.\\nCAMINANTE, NO HAY CAMINO\\nSINO ESTELAS EN LA MAR.\\n\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
     }
    ],
    "source": [
+    "#Utilizei um dicionário para representar a tabela e adicionei, pelo bem da poesia alguns caracteres de pontuação.\n",
     "letters_values = {\"A\":7,\"B\":2, \"C\":2, \"D\":3,\"E\":11,\"F\":2,\"G\":2,\"H\":6,\"I\":6,\"J\":1,\"K\":1,\"L\":4,\"M\":3,\"N\":7,\"O\":8,\"P\":2,\"Q\":1,\"R\":6,\"S\":6,\"T\":8,\"U\":4,\"V\":1,\"W\":2,\"X\":1,\"Y\":2,\"Z\":1,\" \":10,\"\\n\":5,\",\":4,\".\":2}\n",
     "\n",
+    "\n",
     "def CreateHuffmanTree(letter_value_dictionary):\n",
+    "    #Transformando o dicionário em lista ordenada\n",
     "    letters_list = sorted([[v,k] for k,v in letters_values.items()] ,key=lambda x:x[0])\n",
+    "    #Mapeando cada elemento do lista para ser os dados de um Nó e assim ter objetos homogêneos a serem trabalhados posterioemente\n",
     "    tree_list = [Node(element) for element in letters_list]\n",
     "\n",
+    "    #Conforme o algorítmo apresentado em aula: \n",
     "    while len(tree_list) > 1:\n",
+    "        #removemos os dois primeiros elementos da fila (que em python podemos usar uma lista) e já os salvamos para serem filhos de uma raíz \n",
     "        nodeLeft = tree_list.pop(0)\n",
     "        nodeRight = tree_list.pop(0)\n",
+    "        #Somamos as frequências dos mesmos para ser o dado de sua raíz\n",
     "        frequency_acc = nodeLeft.data[0] + nodeRight.data[0]\n",
+    "        #Criamos a raiz com sua respectiva frequência e filhos\n",
     "        root = Node([frequency_acc])\n",
     "        root.leftChild = nodeLeft\n",
     "        root.rightChild = nodeRight\n",
+    "        #Criamos uma variável auxiliar i para contar o ídice enquanto percorremos a fila para inserir nossa subárvore criada na posição adequada. Sendo esta a posição imediatamente posterior a frequência de sua raíz ou última posição.\n",
     "        i = 0 \n",
-    "        #print(tree_list[i].data[0],root.data[0])\n",
     "        while i < len(tree_list) and tree_list[i].data[0] < root.data[0]:\n",
     "            i = i + 1\n",
-    "            #print(i, end=' ')\n",
-    "        #print()\n",
     "        tree_list.insert(i, root)\n",
-    "        #print(root.data,\"i:\",i,\"len:\",len(tree_list))\n",
     "    return tree_list[0]\n",
     "\n",
     "def HuffmanTreeToEncode_result(root):\n",
-    "    \n",
+    "    #Nessa gambiarra surgiu a iluminção pra solucionar a questão Q2, percorremos recursivamente a árvore armazenando em uma variável externa informações do percurso, nesse caso os 0s e 1s correspondentes a cada letra.  \n",
     "    def HuffmantreeToEncode(root,code=[]):\n",
     "        if root.leftChild:\n",
     "            HuffmantreeToEncode(root.leftChild,code+[0])\n",
@@ -586,6 +617,7 @@
     "    HuffmantreeToEncode(root)\n",
     "    return result\n",
     "\n",
+    "#Função pra normalizar o texto, remover acentos, caractêres especiais...\n",
     "import re\n",
     "def Normaliza(word):\n",
     "    import unicodedata\n",
@@ -596,16 +628,23 @@
     "\n",
     "def TextToHuffCode(text,huff_encode):\n",
     "    code = []\n",
+    "    #Percorremos os texto, normalizando e capitalizando cada caractere e o introduzimos como chave no dicionário de cada letra para seu respectivo código. Cada um desses códigos é adicionado a uma lista inicialmente vazia.\n",
+    "    #Caso o caractere não esteja no dicionário o programa printa um aviso com o caractere em questão e continua a codificação\n",
+    "    \n",
     "    for letter in Normaliza(text):\n",
     "        try:\n",
-    "            code.append(    ' '.join(str(number) for number in huff_encode[letter.upper()]) )\n",
+    "            code.append( ' '.join(str(number) for number in huff_encode[letter.upper()]) )\n",
     "        except KeyError:\n",
     "            print(\"caráctere Inválido:>>\"+letter+\"<<\")\n",
+    "    #Finalmente transformamos a lista de códigos para uma string e a retornamos.\n",
     "    return(' '.join(code))\n",
     "\n",
     "def HuffToText(code,huff_encode):\n",
-    "    text = []\n",
+    "    #Criamos uma string para o texto decodificado\n",
+    "    text = ''\n",
+    "    #Criamos uma lista auxiliar para armazenamento temporário de cada unidade elementar de cada código até que ele codifique um caractere, onde a lista auxiliar será reiniciada. \n",
     "    caractere_code = []\n",
+    "    #Removemos os espaços e o x toma o valor de cada elemento do código, que será acumulado em \"caractere_code\" até que codifique um caractere, que será trazido pra texto e dessa forma decodificado, printado e salvo como strig.\n",
     "    for x in code.replace(' ',''):\n",
     "        caractere_code.append(int(x))\n",
     "        #print(x)\n",
@@ -613,8 +652,10 @@
     "            #print(v)\n",
     "            if v == caractere_code:\n",
     "                print(k,end='')\n",
+    "                text += k\n",
     "                caractere_code = []\n",
     "    print()\n",
+    "    return text\n",
     "       \n",
     "\n",
     "print(\"Construindo árvore\")\n",
@@ -631,6 +672,7 @@
     "print(\"--------------------------------\\n Agora leremos um arquivo de texto, converteremos e salvaremos o código:\\n\") \n",
     "text = Read_Text(\"texto.txt\")\n",
     "code = TextToHuffCode(text,huff_encode)\n",
+    "Save_Text(code,\"Huff_Code_Text\")\n",
     "print(code)\n",
     "HuffToText(code,huff_encode)"
    ]
